--- a/testukol/package.json
+++ b/testukol/package.json
@@ -35,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-flow": "^7.18.6",
+    "flow-bin": "^0.184.0"
   }
 }
